--- a/authors.qmd
+++ b/authors.qmd
@@ -20,7 +20,7 @@ title: "Faculty"
 
 ## Teaching Assistants
 
-![](img/kelsycotto.png){width=4in fig-align="left"}
+![](img/kelsycotto.jpg){width=4in fig-align="left"}
 
 **Kelsy Cotto, Ph.D.** completed her PhD in the Molecular Cell Biology program at Washington University in St. Louis. Her thesis focused on the integration of genomic and transcriptomic data to identify cancer-specific splice altering variants. Prior to that, she graduated from Mercer University with honors in Biochemistry and Molecular Biology. She is passionate about using computational approaches to further understand biology and develop better therapeutic approaches for patients. She has experience working with genomic and transcriptomic data using data from Illumina, Oxford-Nanopore Technologies, 10X Genomics, particularly to identify tumor specific antigens and the TCRs that recognize them.
 
