minor updates to schedule

--- a/course.qmd
+++ b/course.qmd
@@ -21,7 +21,6 @@ title: "Course overview"
 2. [Introduction to IGV](https://rnabio.org/module-02-alignment/0002/05/02/AlignVis_IGV/) (Lead: Malachi)
 
 3. [Differential Expression Analysis (DESeq2)](https://rnabio.org/module-03-expression/0003/03/03/Differential_Expression-DESeq2/) (Lead: Zach)
-[Code blocks for DE](course/test_newfile.qmd)
 
 4. [Differential Expression Visualization (DESeq2)](https://rnabio.org/module-03-expression/0003/04/02/DE_Visualization-DESeq2/) (Lead: Zach)
 
@@ -29,7 +28,7 @@ title: "Course overview"
 
 6. [Pathway Analysis](https://rnabio.org/module-03-expression/0003/05/01/DE_Pathway_Analysis/) (Lead: Obi)
 
-7. [Batch Correction](https://rnabio.org/module-03-expression/0003/06/02/Batch-Correction/) (Lead: Malachi)
+7. [Batch Correction - brief introduction](https://rnabio.org/module-03-expression/0003/06/02/Batch-Correction/) (Lead: Malachi)
 
 # Single cell RNA sequencing (Day 4, Tue. - Day 5, Wed.)
 
