--- a/course_2024.qmd
+++ b/course_2024.qmd
@@ -4,13 +4,13 @@ title: "CRI Bioinformatics Bootcamp 2024"
 
 # R Workshop (Day 1, Sat. - Day 2, Sun.)
 
-1.  [Introduction to R](course/1_introR.qmd)
+1.  [Introduction to R](course/2024/1_introR.qmd)
 
-2.  [Basic plotting and statistics](course/2_basicplotting.qmd)
+2.  [Basic plotting and statistics](course/2024/2_basicplotting.qmd)
 
-3.  [Clustering concepts and correlation](course/3_clustering.qmd)
+3.  [Clustering concepts and correlation](course/2024/3_clustering.qmd)
 
-4.  [Common challenges and additional resources](course/4_qctrouble.qmd)
+4.  [Common challenges and additional resources](course/2024/4_qctrouble.qmd)
 
 # Bulk RNA sequence analysis (Day 3, Mon.)
 
@@ -21,7 +21,7 @@ title: "CRI Bioinformatics Bootcamp 2024"
 2. [Introduction to IGV](https://rnabio.org/module-02-alignment/0002/05/02/AlignVis_IGV/) (Lead: Malachi)
 
 3. [Differential Expression Analysis (DESeq2)](https://rnabio.org/module-03-expression/0003/03/03/Differential_Expression-DESeq2/) (Lead: Zach)
-[Code blocks for DE](course/test_newfile.qmd)
+[Code blocks for DE](course/2024/test_newfile.qmd)
 
 4. [Differential Expression Visualization (DESeq2)](https://rnabio.org/module-03-expression/0003/04/02/DE_Visualization-DESeq2/) (Lead: Zach)
 
