fix reactable and/or code-link attempt

--- a/course/1_introR.qmd
+++ b/course/1_introR.qmd
@@ -3,6 +3,7 @@ title: "Introduction to R"
 format:
   html:
     code-link: true
+engine: knitr
 ---
 
 # RStudio: Introduction and Interface Orientation
